--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@studio-freight/lenis": "^1.0.42",
     "aos": "^2.3.4",
     "react": "^19.0.0",
     "react-countup": "^6.5.3",
